# Real

./: .gitignore  Cargo.toml  LICENSE  Readme.md  ReadmeEN.md  build.rs  index.html  pkg.bat  pkg.sh
.github/workflows/: note.md  release.yml
assets/css/: main.css  root.css
assets/css/components/: cube.css  footer.css  header.css  nav.css
assets/css/components/content/: content-card.css  content-list.css  content-loading.css  content.css
assets/css/components/menu/: index-menu.css  pop_menu.css  scroll-menu.css
icons/: logo.icns
src/: desktop.rs  desktop_launch.rs  lib.rs  main.rs  web.rs  web_launch.rs
src/components/: card.rs  cube.rs  footer.rs  header.rs  list.rs  menu.rs  mod.rs  nav.rs
src/data/: mod.rs
src/data/config/: config_db.rs  config_reader.rs  list.rs  mod.rs  setting.rs
src/data/media/: mod.rs
src/data/search/: mod.rs  search_ncm.rs
src/page/: home.rs  local.rs  mod.rs  ncm.rs  playlist.rs  qm.rs
src/test/: mod.rs  search.rs
