[package]
name = "real"
version = "0.0.1"
authors = ["fangtaluosi <fangtaluosi@outlook.com>"]
description = "An experimental music player, powered by dioxus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pkg"
path = "bin/pkg.rs"

# 通用依赖
[dependencies]
# 统一错误处理
anyhow = "1.0.66"

# 可能用于替代 fermi
once_cell = "1.16.0"

# 图标生成
image = "0.24.5"

# 解析数据相关
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
nom = "7.1.1"
# 可能的 json 结构代替品
indexmap = "1.9.2"

futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"]}

# 媒体解码器
rodio = { version = "0.16.0", default-features = false, features = ["symphonia-all"] }

# log = "0.4.17"

# 跨平台相关依赖

# desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = {version = "0.2.4", features = ["desktop", "fermi", "router"]}
# 存储数据库
sled = "0.34.7"
# 临时文件，或许可以用来本地播放音乐
tempfile = "3.3.0"
# 遍历目录，管理本地音乐
walkdir = "2.3.2"
# 文件变动监听
notify = "5.0.0"
# 解析音频元数据
lofty = "0.10.0"
tokio = { version = "1.23.0"}

# wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = {version = "0.2.4", features = ["web", "fermi", "router"]}

# windows 注册表相关
[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[build-dependencies]
embed-resource = "1.8.0"