[package]
name = "Real"
version = "0.0.1"
authors = ["fangtaluosi <fangtaluosi@outlook.com>"]
description = "An experimental music player, powered by dioxus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "pkg"
# path = "bin/pkg.rs"

# 通用依赖
[dependencies]
dioxus = "0.3.1"
fermi = "0.3.0"
router = {version = "0.3.0", package = "dioxus-router"}

# 统一错误处理
anyhow = "1.0.66"
log = "0.4.17"

# 解析数据相关
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
nom = "7.1.1"
# 可能用于替代 fermi
once_cell = "1.16.0"
# 图标生成
image = "0.24.5"

futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json"]}
# 媒体解码器
rodio = { version = "0.16.0", default-features = false, features = ["symphonia-all"] }

# desktop
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
desktop = {version = "0.3.0", features = ["transparent", "tray"], package = "dioxus-desktop"}
# 临时文件
tempfile = "3.3.0"
# 遍历目录
walkdir = "2.3.2"
# 文件变动监听
notify = "5.0.0"
# 解析音频元数据
lofty = "0.11.0"
tokio = { version = "1.23.0"}

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
web = {version = "0.3.0", package = "dioxus-web"}

# windows 注册表相关
[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[build-dependencies]
embed-resource = "1.8.0"