[package]
name = "Real"
version = "0.0.1"
authors = ["fangtaluosi <fangtaluosi@outlook.com>"]
description = "An experimental music player, powered by dioxus"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
web = []
native = []

# 通用依赖
[dependencies]
dioxus = "0.3.2"
fermi = "0.3.0"
router = { version = "0.3.0", package = "dioxus-router" }

# 统一错误处理
anyhow = "1.0.71"
log = "0.4.19"

# 解析数据相关
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
toml = "0.7.6"
# nom = "7.1.1"

# 图标生成
image = "0.24.6"

futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"]}
# 媒体解码器
symphonia = { version = "0.5.2", features = ["all"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
desktop = { version = "0.3.0", package = "dioxus-desktop" }
# 临时文件
tempfile = "3.6.0"
# 遍历目录
walkdir = "2.3.3"
# 文件变动监听
notify = "6.0.1"
tokio = { version = "1.29.1"}

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
web = { version = "0.3.2", package = "dioxus-web" }

# windows 注册表相关
[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

[build-dependencies]
embed-resource = "2.1.1"